--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "PolyFrise Backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.1.2"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "env-cmd -f ./env/.env.dev node server.js",
+        "prod": "env-cmd -f ./env/.env.prod node server.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "body-parser": "^1.19.2",
+        "chalk": "^4.0.1",
+        "cors": "^2.8.5",
+        "email-validator": "^2.0.4",
+        "express": "^4.17.3",
+        "http": "^0.0.1-security",
+        "jsonwebtoken": "^8.5.1",
+        "mysql2": "^3.3.1",
+        "sequelize": "^6.31.1"
+    },
+    "devDependencies": {
+        "env-cmd": "^10.1.0"
+    }
 }
