--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "@angular/animations": "^15.1.0",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
+    "@angular/core": "^15.2.9",
     "@angular/forms": "^15.1.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
+    "@angular/router": "^15.2.9",
+    "@ckeditor/ckeditor5-angular": "^6.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^38.0.1",
+    "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
