--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@ckeditor/ckeditor5-angular": "^6.0.1",
     "@ckeditor/ckeditor5-build-classic": "^38.0.1",
     "bootstrap": "^5.2.3",
+    "labella": "^1.1.4",
     "ng5-slider": "^1.2.6",
     "ngx-daterangepicker-material": "^6.0.4",
     "rxjs": "~7.8.0",
