--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -28,7 +28,8 @@
                             "src/styles.css",
                             "node_modules/bootstrap/scss/bootstrap.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                        ]
                     },
                     "configurations": {
                         "production": {
