--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@ckeditor/ckeditor5-angular": "^6.0.1",
     "@ckeditor/ckeditor5-build-classic": "^38.0.1",
     "bootstrap": "^5.2.3",
+    "d3": "^7.8.4",
+    "d3kit-timeline": "^2.0.1",
     "labella": "^1.1.4",
     "ng5-slider": "^1.2.6",
     "ngx-daterangepicker-material": "^6.0.4",
@@ -33,6 +35,7 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/d3": "^7.4.0",
     "@types/jasmine": "~4.3.0",
     "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.5.0",
