--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,8 +25,9 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css",
-                            "node_modules/bootstrap/scss/bootstrap.scss"
+                          "@angular/material/prebuilt-themes/indigo-pink.css",
+                          "src/styles.css",
+                          "node_modules/bootstrap/scss/bootstrap.scss"
                         ],
                         "scripts": [
                         ]
@@ -88,7 +89,8 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css"
+                          "@angular/material/prebuilt-themes/indigo-pink.css",
+                          "src/styles.css"
                         ],
                         "scripts": []
                     }
