--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,51 +1,58 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.2.9",
-    "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.2.9",
-    "@ckeditor/ckeditor5-angular": "^6.0.1",
-    "@ckeditor/ckeditor5-build-classic": "^38.0.1",
-    "bootstrap": "^5.2.3",
-    "d3": "^7.8.4",
-    "d3kit-timeline": "^2.0.1",
-    "labella": "^1.1.4",
-    "ng5-slider": "^1.2.6",
-    "ngx-daterangepicker-material": "^6.0.4",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "uuid": "^9.0.0",
-    "zone.js": "~0.12.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.5",
-    "@angular/cli": "~15.1.5",
-    "@angular/compiler-cli": "^15.1.0",
-    "@types/d3": "^7.4.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/uuid": "^9.0.1",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
-  }
+    "name": "frontend",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^15.1.0",
+        "@angular/cdk": "^15.2.9",
+        "@angular/common": "^15.1.0",
+        "@angular/compiler": "^15.1.0",
+        "@angular/core": "^15.2.9",
+        "@angular/forms": "^15.1.0",
+        "@angular/material": "^15.2.9",
+        "@angular/platform-browser": "^15.1.0",
+        "@angular/platform-browser-dynamic": "^15.1.0",
+        "@angular/router": "^15.2.9",
+        "@ckeditor/ckeditor5-angular": "^6.0.1",
+        "@ckeditor/ckeditor5-build-classic": "^38.0.1",
+        "bootstrap": "^5.2.3",
+        "d3": "^7.8.4",
+        "d3kit-timeline": "^2.0.1",
+        "dom-to-image": "^2.6.0",
+        "file-saver": "^2.0.5",
+        "jspdf": "^2.5.1",
+        "labella": "^1.1.4",
+        "moment": "^2.29.4",
+        "ng5-slider": "^1.2.6",
+        "ngx-daterangepicker-material": "^6.0.4",
+        "rxjs": "~7.8.0",
+        "svg2pdf.js": "^2.2.1",
+        "tslib": "^2.3.0",
+        "uuid": "^9.0.0",
+        "zone.js": "~0.12.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^15.1.5",
+        "@angular/cli": "~15.1.5",
+        "@angular/compiler-cli": "^15.1.0",
+        "@types/d3": "^7.4.0",
+        "@types/dom-to-image": "^2.6.4",
+        "@types/file-saver": "^2.0.5",
+        "@types/jasmine": "~4.3.0",
+        "@types/uuid": "^9.0.1",
+        "jasmine-core": "~4.5.0",
+        "karma": "~6.4.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.1.0",
+        "karma-jasmine-html-reporter": "~2.0.0",
+        "typescript": "~4.9.4"
+    }
 }
