--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "env-cmd -f ./env/.env.dev node server.js",
-        "prod": "env-cmd -f ./env/.env.prod node server.js"
+        "start": "npm run dev"
     },
     "author": "",
     "license": "ISC",
@@ -14,7 +14,7 @@
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.2",
-        "chalk": "^4.0.1",
+        "chalk": "^4.1.2",
         "cors": "^2.8.5",
         "email-validator": "^2.0.4",
         "express": "^4.18.2",
