--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,14 @@
         "d3kit-timeline": "^1.3.1",
         "dom-to-image": "^2.6.0",
         "file-saver": "^2.0.5",
+        "fs": "^0.0.1-security",
         "jspdf": "^2.5.1",
         "labella": "^1.1.4",
         "moment": "^2.29.4",
         "ng5-slider": "^1.2.6",
         "ngx-daterangepicker-material": "^6.0.4",
+        "puppeteer": "^21.7.0",
+        "puppeteer-screenshot-tester": "^1.6.0",
         "rxjs": "~7.8.0",
         "svg2pdf.js": "^2.2.1",
         "tslib": "^2.3.0",
