--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,26 +24,34 @@
         "@ckeditor/ckeditor5-angular": "^6.0.1",
         "@ckeditor/ckeditor5-build-classic": "^38.0.1",
         "bootstrap": "^5.2.3",
+        "browserify-fs": "^1.0.0",
         "cors": "^2.8.5",
         "d3": "^7.8.4",
+        "d3-time-format": "^4.1.0",
         "d3kit-timeline": "^1.3.1",
         "dom-to-image": "^2.6.0",
         "file-saver": "^2.0.5",
         "fs": "^0.0.1-security",
+        "html2canvas": "^1.4.1",
         "jspdf": "^2.5.1",
         "labella": "^1.1.4",
         "moment": "^2.29.4",
         "ng5-slider": "^1.2.6",
         "ngx-daterangepicker-material": "^6.0.4",
+        "os-browserify": "^0.3.0",
         "puppeteer": "^21.7.0",
-        "puppeteer-screenshot-tester": "^1.6.0",
+        "puppeteer-screenshot-tester": "^1.3.0",
         "rxjs": "~7.8.0",
+        "semver": "^7.5.4",
+        "sharp": "^0.33.2",
+        "stream-browserify": "^3.0.0",
         "svg2pdf.js": "^2.2.1",
         "tslib": "^2.3.0",
         "uuid": "^9.0.0",
         "zone.js": "~0.12.0"
     },
     "devDependencies": {
+        "@angular-builders/custom-webpack": "^16.0.1",
         "@angular-devkit/build-angular": "^15.1.5",
         "@angular/cli": "^15.2.10",
         "@angular/compiler-cli": "^15.1.0",
@@ -53,6 +61,7 @@
         "@types/jasmine": "~4.3.0",
         "@types/uuid": "^9.0.1",
         "jasmine-core": "~4.5.0",
+        "jest-image-snapshot": "^6.4.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage": "~2.2.0",
