--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,13 @@
     "@ckeditor/ckeditor5-angular": "^6.0.1",
     "@ckeditor/ckeditor5-build-classic": "^38.0.1",
     "bootstrap": "^5.2.3",
+    "canvg": "^4.0.1",
     "d3": "^7.8.4",
     "d3-time-format": "^4.1.0",
     "d3kit-timeline": "^1.3.1",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "labella": "^1.1.4",
     "moment": "^2.29.4",
