--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
     "labella": "^1.1.4",
     "moment": "^2.29.4",
